objects/Percentage_of_Completion__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Percentage of Completiosn</relationshipLabel>
        <relationshipName>Percentage_of_Completiosn</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>POC__c</fullName>
        <label>POC (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <label>Percentage of Completion</label>
    <nameField>
        <displayFormat>POC-{00000000}</displayFormat>
        <label>Percentage of Completion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Percentage of Completions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>